@@ -1,6 +1,8 @@
 package com.galaxy.star.newsbox.action;
 
 import java.io.PrintWriter;
+import java.util.HashMap;
+import java.util.Map;
 
 import javax.annotation.Resource;
 import javax.servlet.http.HttpServletRequest;
@@ -9,7 +11,7 @@ import javax.servlet.http.HttpServletResponse;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.RequestMapping;
 
-import com.galaxy.star.newsbox.bean.Test;
+import com.galaxy.star.newsbox.common.Const;
 import com.galaxy.star.newsbox.service.ITestService;
 
 @Controller
@@ -19,27 +21,21 @@ public class HelloController{
 	private ITestService testService;
 	
 	@RequestMapping("qiao")
-	public void sayHello(HttpServletRequest request,HttpServletResponse response,PrintWriter out){
+	public Object sayHello(HttpServletRequest request,HttpServletResponse response){
+		Map<String,Object> result = new HashMap<String,Object>();
 		try{
 			
-//			
-//			Test user = new Test();
-//			user.setUserId(1);
-//			user.setUserName("乔乔");         
-//			testService.addTest(user);
 			
-			Test user1 = testService.findById(20);
-			//-XX:MaxPermSize=1024M
 			
-			out.print(user1.getUserName() + "___");
-			
-
-			
+			result.put("state", "SUCCESS");
+    		result.put("url",Const.HTML_SERVER + "/" + Const.UEDITOR_IMGS + "/" + "文件名");
+    		result.put("title", "文件名");
+    		result.put("original", "文件名");
 			
 		
 		}catch(Exception e){
 		}
-		
+		return result;
 	}
 
 	public ITestService getTestService() {
